src/media/media.scss
#sceneImage{
    z-index: -2;
    position: absolute;
    width: auto;
    height: auto;
    min-width: 100%;
    min-height: 100%;
    background-color: #3a3a3a;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    max-height: 100vh;
}

#sceneVideo{
    z-index: -1;
    position: absolute;
    width: auto;
    height: auto;
    min-width: 100%;
    min-height: 100%;
    background-color: #3a3a3a;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}

